Fix image too large on expanded inventory view on desktop

--- a/src/less/_inventory.less
+++ b/src/less/_inventory.less
@@ -139,6 +139,7 @@
     width: 100%;
 
     @media (min-width:@desktop) {
-        width: 60% !important;
+        width: 50% !important;
+        max-width: 40rem;
     }
 }
